# devcontext

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_MANIFESTO.md  README.md  ROADMAP.md  SECURITY.md  SOCIAL_CONTENT.md  SYSTEM_LOG.md  demo.sh  pyproject.toml  renovate.json  setup.py  test_runner.py
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/workflows/: codeql.yml  release.yml  stale.yml  test.yml
docs/: advanced.md  api-reference.md  api.md  architecture.md  best-practices.md  changelog.md  cli-commands.md  cli.md  comparison.md  configuration.md  contributing.md  development.md  examples.md  faq.md  index.md  installation.md  integrations.md  languages.md  performance.md  plugins.md  security.md  showcase.md  testing.md  troubleshooting.md  usage-tips.md
src/devcontext/: __init__.py  ai_prompts.py  analyzer.py  api.py  api_client.py  audit.py  backup.py  banner.py  batch.py  cache.py  ci.py  ci_cd.py  ci_utils.py  cli.py  compat.py  completion.py  config.py  devcontext.py  diff.py  docgen.py  export.py  hooks.py  merge.py  metrics.py  migrate.py  notifiers.py  output.py  parser.py  performance.py  plugins.py  realtime.py  report.py  reporter.py  scheduler.py  search.py  security.py  share.py  snapshot.py  stats.py  templates.py  (+6 more)
tests/: test_devcontext.py
